--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Manuel-yang/project4tea"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cli": "ts-node src/index.ts"
